# py-open-weather

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
pyweather/: __init__.py  airpol.py  apmodel.py  constants.py  curweath.py  cwmodel.py
